--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="nav-left">
                     <ul>
                         <li>
-                            <a href="#"><img src="img/logo-small.png" alt="logo DropBox"></a>
+                            <a id="logo" href="#"><img src="img/logo-small.png" alt="logo DropBox"></a>
                             <a href="#">Perchè DropBox?</a>
                             <a href="#">Funzioni</a>
                             <a href="#">Piani e prezzi</a>
@@ -30,7 +30,7 @@
                             <a href="#">Supporto</a>
                             <a href="#">Contatta l' Ufficio vendite</a>
                             <a href="#">Accedi</a>
-                            <a href="#">Inizia</a>
+                            <a class="banner" href="#">Inizia</a>
                         </li>
                     </ul>
                 </div>
