--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>DropBox</title>
 </head>
@@ -37,6 +38,33 @@
             </nav>
             <!-- fine barra di navigazione -->
         </header>
+
+        <main>
+            <!-- background color
+            titolo
+            img e testo float -->
+
+            <div class="container-main">
+                <section class="first-section w-70">
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                    <div>
+                        <div class="text-left">
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. DropBox Business è più di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                            </p>
+                            <a class="banner" href="#">Inizia la prova gratuita</a>
+                            <div>
+                                Annulla in qualsiasi momento
+                            </div>
+                            <i class="fas fa-arrow-down"></i>
+                        </div>
+                        <div class="jumbotron"> </div>
+                    </div>
+                </section>
+                
+            </div>
+            
+        </main>
     </div>
 
 </body>
