main -prima sezione jumbo completata

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             titolo
             img e testo float -->
 
-            <div class="container-main">
-                <section class="first-section w-70">
+            <div class="background w-100">
+                <section class="first-section w-90">
                     <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                    <div>
-                        <div class="text-left">
-                            <p>
-                                Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. DropBox Business è più di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
-                            </p>
-                            <a class="banner" href="#">Inizia la prova gratuita</a>
-                            <div>
-                                Annulla in qualsiasi momento
-                            </div>
-                            <i class="fas fa-arrow-down"></i>
+                    <div class="text-left">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. DropBox Business è più di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <a class="banner" href="#">Inizia la tua prova gratuita</a>
+                        <div>
+                            Annulla in qualsiasi momento
                         </div>
-                        <div class="jumbotron"> </div>
+                        <i class="fas fa-arrow-down"></i>
+                    </div>
+                    <div class="jumbotron">
+                        <img src="img/jumbo.png" alt="jumbo">
                     </div>
                 </section>
                 
