struttura main second-section 3col

--- a/index.html
+++ b/index.html
@@ -61,9 +61,29 @@
                         <img src="img/jumbo.png" alt="jumbo">
                     </div>
                 </section>
-                
             </div>
             
+            <div>
+                <section class="second-section w-70">
+                    <div class="type-billing">
+                        <h2>Trova il tuo paino Dropbox Business che fa per te</h2>
+                        <div><span><i style="color: blue;" class="fas fa-dot-circle"></i> Fatturazione mensile</span> <span><i class="far fa-circle"></i> Fatturazione annuale</span></div>
+                    </div>
+                    <div class="col1-col2-col3">
+                        <div class="col1">
+                            prova1
+                        </div>
+
+                        <div class="col2">
+                            prova2
+                        </div>
+
+                        <div class="col3">
+                            prova3
+                        </div>
+                    </div>
+                </section>
+            </div>
         </main>
     </div>
 
