fine second-section

--- a/index.html
+++ b/index.html
@@ -66,24 +66,104 @@
             <div>
                 <section class="second-section w-70">
                     <div class="type-billing">
-                        <h2>Trova il tuo paino Dropbox Business che fa per te</h2>
+                        <h2>Trova il tuo piano Dropbox Business che fa per te</h2>
                         <div><span><i style="color: blue;" class="fas fa-dot-circle"></i> Fatturazione mensile</span> <span><i class="far fa-circle"></i> Fatturazione annuale</span></div>
                     </div>
-                    <div class="col1-col2-col3">
+                    <div class="col1-col2-col3 clearfix">
                         <div class="col1">
-                            prova1
+                            <div class="type-abb">
+                                <i class="far fa-user-circle"></i> Singolo
+                            </div>
+                            <div class="abb">
+                                <h2>Professional</h2>
+                            <div><b>19,99€</b></div>
+                            <div><i class="far fa-user-circle"></i> 1 utente</div>
+                            <div><i class="far fa-user-circle"></i> 3 TB di spazio di archivazione sicuro</div>
+                            <div><i class="far fa-user-circle"></i> Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            <div class="banner1">Prova gratis per 30 giorni</div>
+                            <div>oppure <span style="color: blue;"> acquista ora</span></div>
+
+                            <hr>
+
+                            <h4>Punti salienti del piano</h4>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Invia file fino a 100GB con Dropbox transfert</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Cartelle offline su dispositivi mobili</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Pulizia remota dell' account</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Filigrana documento</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Assistenza prioritaria via mail e chat</div>
+                            </div>
                         </div>
 
                         <div class="col2">
-                            prova2
+                            <div class="type-abb">
+                                <i class="far fa-user-circle"></i> Singolo
+                            </div>
+                            <div class="abb">
+                                <h2>Professional</h2>
+                            <div><b>19,99€</b></div>
+                            <div><i class="far fa-user-circle"></i> 1 utente</div>
+                            <div><i class="far fa-user-circle"></i> 3 TB di spazio di archivazione sicuro</div>
+                            <div><i class="far fa-user-circle"></i> Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            <div class="banner1">Prova gratis per 30 giorni</div>
+                            <div>oppure <span style="color: blue;"> acquista ora</span></div>
+
+                            <hr>
+
+                            <h4>Punti salienti del piano</h4>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Invia file fino a 100GB con Dropbox transfert</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Cartelle offline su dispositivi mobili</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Pulizia remota dell' account</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Filigrana documento</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Assistenza prioritaria via mail e chat</div>
+                            </div>
                         </div>
 
                         <div class="col3">
-                            prova3
+                            <div class="type-abb">
+                                <i class="far fa-user-circle"></i> Singolo
+                            </div>
+                            <div class="abb">
+                                <h2>Professional</h2>
+                            <div><b>19,99€</b></div>
+                            <div><i class="far fa-user-circle"></i> 1 utente</div>
+                            <div><i class="far fa-user-circle"></i> 3 TB di spazio di archivazione sicuro</div>
+                            <div><i class="far fa-user-circle"></i> Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                            <div class="banner1">Prova gratis per 30 giorni</div>
+                            <div>oppure <span style="color: blue;"> acquista ora</span></div>
+
+                            <hr>
+
+                            <h4>Punti salienti del piano</h4>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Invia file fino a 100GB con Dropbox transfert</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Cartelle offline su dispositivi mobili</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Pulizia remota dell' account</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Filigrana documento</div>
+                            <div><i style="color: blue;" class="far fa-check-circle"></i> Assistenza prioritaria via mail e chat</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-button">
+                        <div class="type-abb">
+                            <i class="far fa-user-circle"></i> Singolo
+                        </div>
+                        <div>
+                            <h2>
+                                Enterprise
+                            </h2>
+                            <h4>
+                                Contatta l' ufficio vendite per i prezzi
+                            </h4>
+                            <div>
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                            </div>
+                            <div class="banner">
+                                Contatta l' ufficio vendite   
+                            </div>
                         </div>
                     </div>
                 </section>
             </div>
+
         </main>
     </div>
 
