struttura four-section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,24 @@
 
             </section>
 
+            <section id="four-section" class="w-70">
+                <div class="content-box">
+
+                    <div class="content-img">
+                        <img src="img/business-feature-switching-tools.png" alt="switching tools">
+                    </div>
+
+                    <div class="content-text">
+                        <h4>
+                            Passa Di meno da uno strumento all' altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        </p>
+                    </div>
+
+                </div>
+            </section>
         </main>
     </div>
 
