fine five-section

--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
             <section id="five-section"> 
                 <div class="row-text">
                     <div class="w-70">
-                        <h2>Più di 500.000 team</h2>
-                        <h2>utilizzano Dropbox Business</h2>
+                        <h2>Più di 500.000 team<br>utilizzano Dropbox Business</h2>
                         <a style="color: blue;" href="#">Scopri di più sui nostri clienti</a>
                     </div>
                 </div> 
@@ -305,6 +304,15 @@
                             </div>
                         </div>
 
+                        <div class="central-text">
+                            <div class="designit"></div>
+                            <hr>
+                            <p>
+                                "I mebri del nostro team lavorano costantemente in pesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox paper. ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".
+                            </p>
+                            <div>Morten Thomsen, Global IT Lead</div>
+                        </div>
+
                         <div class="teams-right clearfix">
                             <div class="square-left">
                                 <div class="square top-left"></div>
@@ -317,7 +325,10 @@
                         </div>
 
                     </div>
-                
+                    <div class="w-70">
+                        <h2 style="color: purple;">Porta Dropbox Business<br>nella tua azienda.</h2>
+                        <div class="banner3">Inizia la tua prova gratuita</div>
+                    </div>
                 </div>
                 
             </section>
