--- a/index.html
+++ b/index.html
@@ -356,6 +356,67 @@
                 </div>
             </section> 
         </main>
+
+        <footer>
+            <div class="w-90">
+                <div class="footer-top clearfix">
+                    <div class="col-footer">
+                        <ul>
+                           <li>Dropbox</li>
+                           <li><a href="#">Applicazione desktop</a></li>
+                           <li><a href="#">Perchè Dropbox</a></li>
+                           <li><a href="#">Piani</a></li>
+                           <li><a href="#">Sicurezza</a></li>
+                           <li><a href="#">funzioni</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-footer">
+                        <ul>
+                           <li>Prodotti</li>
+                           <li><a href="#">Applicazione desktop</a></li>
+                           <li><a href="#">Perchè Dropbox</a></li>
+                           <li><a href="#">Piani</a></li>
+                           <li><a href="#">Sicurezza</a></li>
+                           <li><a href="#">funzioni</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-footer">
+                        <ul>
+                           <li>Azienda</li>
+                           <li><a href="#">Applicazione desktop</a></li>
+                           <li><a href="#">Perchè Dropbox</a></li>
+                           <li><a href="#">Piani</a></li>
+                           <li><a href="#">Sicurezza</a></li>
+                           <li><a href="#">funzioni</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-footer">
+                        <ul>
+                           <li>Supporto</li>
+                           <li><a href="#">Applicazione desktop</a></li>
+                           <li><a href="#">Perchè Dropbox</a></li>
+                           <li><a href="#">Piani</a></li>
+                           <li><a href="#">Sicurezza</a></li>
+                           <li><a href="#">funzioni</a></li>
+                        </ul>
+                    </div>
+                     <div class="col-footer">
+                        <ul>
+                           <li>Comunity</li>
+                           <li><a href="#">Applicazione desktop</a></li>
+                           <li><a href="#">Perchè Dropbox</a></li>
+                           <li><a href="#">Piani</a></li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div class="footer-bottom">
+                    <hr>
+                    <div><i class="fas fa-globe-americas"></i>italiano<i class="fas fa-caret-up"></i></div>
+                </div>    
+            </div>
+           
+        </footer>
     </div>
 
 </body>
