--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a href="#">Supporto</a>
                             <a href="#">Contatta l' Ufficio vendite</a>
                             <a href="#">Accedi</a>
-                            <a class="banner" href="#">Inizia</a>
+                            <a class="banner1" href="#">Inizia</a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
                             <p>
                                 Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. DropBox Business è più di uno spazio di archivazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                             </p>
-                            <a class="banner" href="#">Inizia la tua prova gratuita</a>
+                            <a class="banner1" href="#">Inizia la tua prova gratuita</a>
                             <div>
                                 Annulla in qualsiasi momento
                             </div>
@@ -158,7 +158,7 @@
                         <div>
                             Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
                         </div>
-                        <div class="banner">
+                        <div class="banner1">
                             Contatta l' ufficio vendite   
                         </div>
                     </div>
@@ -283,12 +283,10 @@
             </section>
         
             <section id="fifth-section"> 
-                <div class="row-text">
                     <div class="w-70">
                         <h2>Più di 500.000 team<br>utilizzano Dropbox Business</h2>
                         <a style="color: blue;" href="#">Scopri di più sui nostri clienti</a>
                     </div>
-                </div> 
                 
                 <div class="background-w-100">
                     <div class="select-teams clearfix">
@@ -367,7 +365,7 @@
                            <li><a href="#">Perchè Dropbox</a></li>
                            <li><a href="#">Piani</a></li>
                            <li><a href="#">Sicurezza</a></li>
-                           <li><a href="#">funzioni</a></li>
+                           <li><a href="#">Funzioni</a></li>
                         </ul>
                     </div>
                     <div class="col-footer">
@@ -377,7 +375,7 @@
                            <li><a href="#">Perchè Dropbox</a></li>
                            <li><a href="#">Piani</a></li>
                            <li><a href="#">Sicurezza</a></li>
-                           <li><a href="#">funzioni</a></li>
+                           <li><a href="#">Funzioni</a></li>
                         </ul>
                     </div>
                     <div class="col-footer">
@@ -387,7 +385,7 @@
                            <li><a href="#">Perchè Dropbox</a></li>
                            <li><a href="#">Piani</a></li>
                            <li><a href="#">Sicurezza</a></li>
-                           <li><a href="#">funzioni</a></li>
+                           <li><a href="#">Funzioni</a></li>
                         </ul>
                     </div>
                     <div class="col-footer">
@@ -397,7 +395,7 @@
                            <li><a href="#">Perchè Dropbox</a></li>
                            <li><a href="#">Piani</a></li>
                            <li><a href="#">Sicurezza</a></li>
-                           <li><a href="#">funzioni</a></li>
+                           <li><a href="#">Funzioni</a></li>
                         </ul>
                     </div>
                      <div class="col-footer">
