fine progetto + bonus

--- a/index.html
+++ b/index.html
@@ -327,43 +327,47 @@
 
                 <hr>
 
-                <div>
-                    Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?
-                    <a class="answer-arrow" style="color: black;" href="#/"><i class="fas fa-angle-down"></i></a>
+                <div id="question1" class="question">
+                    <div class="float-l">Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?</div> 
+                    <i class="fas fa-angle-down float-r"></i>
+                    <i class="fas fa-angle-up float-r"></i>
                 </div>
-                <div class="answer-hidden">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo! Quisquam eius ut recusandae pariatur optio.
-                </div>
-
-                <hr>
-
-                <div>
-                    Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?
-                    <a style="color: black;" href="#/"><i class="fas fa-angle-down"></i></a>
-                </div>
-                <div class="answer-hidden">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo! Quisquam eius ut recusandae pariatur optio.
+                <div id="answer1" class="answer">
+                   <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div> 
                 </div>
 
                 <hr>
 
-                <div>
-                    Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?
-                    <a style="color: black;" href="#/"><i class="fas fa-angle-down"></i></a>
+                <div id="question2" class="question">
+                   <div class="float-l">Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?</div> 
+                    <i class="fas fa-angle-down float-r"></i>
+                    <i class="fas fa-angle-up float-r"></i>
                 </div>
-                <div class="answer-hidden">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo! Quisquam eius ut recusandae pariatur optio.
+                <div id="answer2" class="answer">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                
+                </div>  
+
+                <hr>
+
+                <div id="question3" class="question">
+                    <div class="float-l">Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?</div> 
+                    <i class="fas fa-angle-down float-r"></i>
+                    <i class="fas fa-angle-up float-r"></i>
+                </div>
+                <div id="answer3" class="answer">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
                 </div>
 
                 <hr>
 
-                <div>
-                    Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?
-                    <a style="color: black;" href="#/"><i class="fas fa-angle-down"></i></a>
+                <div id="question4" class="question">
+                    <div class="float-l">Qual è la differenza tra Dropbox Business Standard e dropbox business Advanced?</div> 
+                    <i class="fas fa-angle-down float-r"></i>
+                    <i class="fas fa-angle-up float-r"></i>
                 </div>
-                <div class="answer-hidden">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo! Quisquam eius ut recusandae pariatur optio.
-                </div>
+                <div id="answer4" class="answer">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
+                </div>  
 
                 <hr>
         </section>
