fine progetto + bonus

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>
             </div>    
@@ -214,7 +214,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>
             </div>     
@@ -228,7 +228,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#/">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>
             </div>     
@@ -242,7 +242,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#/">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>    
             </div> 
@@ -256,7 +256,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#/">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>        
             </div> 
@@ -270,7 +270,7 @@
                         Passa Di meno da uno strumento all' altro
                     </h2>
                     <p>
-                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="DropBox paper">DropBox Paper</a> direttamente da DropBox.       
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni Google, file Microsoft Office e <a style="color: black;" href="#/">DropBox Paper</a> direttamente da DropBox.       
                     </p>
                 </div>  
             </div> 
