fine progetto + bonus

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                     <i class="fas fa-angle-up float-r"></i>
                 </div>
                 <div id="answer1" class="answer">
-                   <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div> 
+                   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate recusandae reiciendis reprehenderit dolorem a quam maxime. Dolorem incidunt eum cumque et harum nam hic repellat ut, ad aspernatur molestias assumenda. lorm
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia itaque nam ea consequatur porro quam? Ex eaque aspernatur quos quia suscipit quibusdam laborum, iste tenetur error asperiores perspiciatis, perferendis facilis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div> 
                 </div>
 
                 <hr>
@@ -344,7 +345,7 @@
                     <i class="fas fa-angle-up float-r"></i>
                 </div>
                 <div id="answer2" class="answer">
-                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, explicabo rerum. Enim, consequuntur. Assumenda non sunt adipisci suscipit, earum, ducimus eligendi cupiditate quaerat nihil laudantium dolore veritatis quas eaque quod. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                
                 </div>  
 
                 <hr>
@@ -355,7 +356,7 @@
                     <i class="fas fa-angle-up float-r"></i>
                 </div>
                 <div id="answer3" class="answer">
-                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis error cum delectus aperiam. Illum cupiditate culpa, placeat eveniet. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
                 </div>
 
                 <hr>
@@ -366,7 +367,8 @@
                     <i class="fas fa-angle-up float-r"></i>
                 </div>
                 <div id="answer4" class="answer">
-                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique aperiam nostrum amet magni magnam, cupiditate accusamus rem rerum qui quos accusantium provident ab asperiores eligendi, delectus nihil aspernatur illo pariatur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolorum maiores. Facilis necessitatibus iusto corporis obcaecati quae nesciunt. Earum officiis quod porro sint quam aspernatur magnam, qui maxime. Facere, corporis. lorm
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam obcaecati temporibus alias praesentium laboriosam voluptas aut voluptatem aperiam assumenda amet. Ut dolore magni, ipsum eum blanditiis quis numquam vel. Ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia consectetur nesciunt earum, ab quidem explicabo fugiat eveniet quis ipsam labore in minima. Eligendi, nemo!</div>                 
                 </div>  
 
                 <hr>
